apps/base/drawio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
  labels:
    app: drawio
spec:
  ports:
    - port: 9070
      protocol: TCP
      targetPort: 8080
  selector:
    app: drawio
  type: LoadBalancer
