apps/base/drawio/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: drawio
  namespace: drawio
spec:
  entryPoints:
    - websecure
  tls:
    secretName: drawio-tls
  routes:
    - match: Host(`drawio.wc`)
      kind: Rule
      services:
        - name: drawio
          port: 9070
